// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`item-bank · 문항 검색(search.php) > allParamsEmpty — 모든 파라미터 빈 문자열 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > arrayParamsAndBadSort — q[] 두 개 + sort=hack · dir=up 1`] = `
{
  "count": 13,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > keywordAndTagTooLong — 키워드 101자 · 태그 51자 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > keywordExactly100 — 키워드 100자(멀티바이트) 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > keywordSingleChar — 키워드 한 글자 1`] = `
{
  "count": 14,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > keywordTagSortTitle — 키워드 분수 + 태그 계산 + 제목 오름차순 1`] = `
{
  "count": 10,
  "message": null,
  "rows": [
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > levelFiveExplicit — 난이도 5 직접 지정 1`] = `
{
  "count": 6,
  "message": null,
  "rows": [
    {
      "id": 24,
      "level": 5,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분수 덧셈과 뺄셈 혼합 계산",
      "unit": "M5-1",
    },
    {
      "id": 25,
      "level": 5,
      "tags": [
        "문장제",
        "서술형",
      ],
      "title": "분수의 곱셈 서술형",
      "unit": "M5-2",
    },
    {
      "id": 26,
      "level": 5,
      "tags": [
        "서술형",
      ],
      "title": "소수 곱셈의 추론",
      "unit": "M5-3",
    },
    {
      "id": 27,
      "level": 5,
      "tags": [
        "개념",
        "서술형",
      ],
      "title": "분수 나눗셈의 원리",
      "unit": "M6-1",
    },
    {
      "id": 28,
      "level": 5,
      "tags": [
        "문장제",
        "오답률높음",
        "서술형",
      ],
      "title": "비율 문제 종합",
      "unit": "M6-2",
    },
    {
      "id": 29,
      "level": 5,
      "tags": [
        "계산",
      ],
      "title": "대분수의 나눗셈",
      "unit": "M6-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > levelSixJustOutside — 난이도 6(범위 밖 +1) 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > negativePageAndLevel — 페이지 -1 · 난이도 -1 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > noParamsDefault — 파라미터 없음: 기본 난이도 · 기본 정렬 · 1페이지 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > pageCapAt999 — 페이지 999 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > pageOverCap — 페이지 1000 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > secondPageAfterExactlyTwenty — 20건 결과의 2페이지 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > unitAndLevelCombined — 단원 M5-1 + 난이도 1 1`] = `
{
  "count": 2,
  "message": null,
  "rows": [
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > unknownUnitCode — 없는 단원 코드 Z99-99 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > whitespaceOnly — 공백뿐인 키워드 · 난이도, 공백 · 대문자 정렬 기준 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;
